# hymer-connect-ha

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  README.md  hacs.json
custom_components/: .gitignore
custom_components/hymer_connect_metadata/: CHANGELOG.md  README.md  __init__.py  api.py  binary_sensor.py  button.py  capability_resolver.py  catalog.py  climate.py  config_flow.py  const.py  coordinator.py  cover.py  dashboard.py  device_tracker.py  diagnostics.py  discovery.py  entity_base.py  fan.py  light.py  manifest.json  number.py  pia_decoder.py  platform_setup.py  preferences.py  repairs.py  runtime_metadata.py  scene.py  select.py  sensor.py  services.yaml  signalr_client.py  slot_actions.py  strings.json  switch.py  template_specs.py  text.py
custom_components/hymer_connect_metadata/data/: README.md
docs/: backlog.md  runtime-metadata.md
scripts/: generate_cleanroom_registry.py  prepare_runtime_metadata.py
tests/: __init__.py  hymer_test_support.py  test_api.py  test_auth_lifecycle.py  test_dashboard.py  test_device_tracker.py  test_diagnostics.py  test_generator_and_entities.py  test_local_capture_replay.py  test_replay_fixtures.py  test_runtime_catalog.py  test_scene.py  test_slot_actions.py  test_template_specs.py  test_token_tool_ble_transport.py  test_token_tool_tls.py  test_token_tool_tokens.py
tests/fixtures/: pia_replay_fixtures.json
tools/hymer_token_tool/: README.md  RUNBOOK.md  app.py  pyproject.toml
tools/hymer_token_tool/hymer_token_tool/: __init__.py  api.py  ble.py  cli.py  scu.py  tls.py  tokens.py
(+21 files in other folders)
